% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

\section{CHANGES in sfsmisc VERSION 1.1-1 [2016-..-..]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{sessionInfoX()} now also reports \code{capabilities()}
      (and more, depending on \R's version).

      \item \code{mult.fig()}'s default for \code{mgp} now adapts to a
      non-default value of \code{par("las")}.
%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
    }
  }
  %% \subsection{BUG FIXES}{
  %%   \itemize{
  %%     \item
  %%   }
  %% }
}

\section{CHANGES in sfsmisc VERSION 1.1-0 [2016-02-22]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{primes()} has optional \code{pSeq} argument,
      surprisingly with no known benefit.
      \item tweaks for \code{xy.unique.x()} speedup.
      \item \code{QUnif(..., p, ...)} now works for large \eqn{p} (and
      gets a \code{silent} option to suppress the message).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix the \code{tkdensity()} bug introduced on 2015-07-22,
      hence, for \pkg{sfsmisc} versions \code{1.0-28} and \code{1.0-29},
      with the \dQuote{codetools cleanup}.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.0-29 [2016-01-22]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item new function \code{read.org.table()} to read emacs
      \file{org} files via \code{\link{read.table}()}.

      \item new \code{loessDemo()}, providing a version of an old
      \code{loess.demo()}.

      \item new \code{sessionInfoX()} utility (with \code{print()} method).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item (workaround R (<= 3.2.2) bug:) the (invisible) return value
      \code{str_data()} no longer contains extraneous \code{NULL}
      entries in the filtering case.
    }
  }
}

